--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -85,25 +85,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Normalization\n",
-    "'''\n",
-    "df=pd.read_csv('~/Downloads/Data-Classification.txt')\n",
-    "\n",
-    "\n",
-    "scaler=MinMaxScaler() # initialize scaler\n",
-    "X_norm=scaler.fit_transform(X)\n",
-    "pd.DataFrame(X_norm).describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -560,7 +541,8 @@
    },
    "outputs": [],
    "source": [
-    "search=GridSearchCV(estimator = pipe, param_grid = pars, scoring=scoring, refit='au_prc_macro', cv=5, n_jobs=2).fit(X_train, y_train)"
+    "search=GridSearchCV(estimator = pipe, param_grid = pars, scoring=scoring, refit='au_prc_macro', cv=5, n_jobs=2).fit(X_train, y_train)\n",
+    "#!!Git set and work https://github.com/codepath/ios_guides/wiki/Using-Git-with-Terminal "
    ]
   },
   {
