--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
        "array(['A', 'C', 'B'], dtype=object)"
       ]
      },
-     "execution_count": 656,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +283,7 @@
        "       [  4,   0, 102]])"
       ]
      },
-     "execution_count": 662,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 678,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -540,13 +540,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pars1 = create_params_pca_nmf(name='reduce_dim', reducers=[PCA(), NMF()], n_samples=n_samples,\\\n",
+    "pars1 = create_params_pca_nmf(name='reduce_dim', reducers=[PCA()], n_samples=n_samples,\\\n",
     "                              m_features=m_features, funcs=algorithms)\n",
     "pars2 = create_params_select_from_model(name='reduce_dim', reducers=[SelectKBest(score_func=f_classif),\\\n",
     "                SelectKBest(score_func=mutual_info_classif)], n_samples=n_samples, m_features=[5, 10], funcs=algorithms)\n",
@@ -557,18 +557,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "search=GridSearchCV(estimator = pipe, param_grid = pars, scoring=scoring, refit='au_prc_macro', cv=5, n_jobs=1,\\\n",
+    "search=GridSearchCV(estimator = pipe, param_grid = pars, scoring=scoring, refit='au_prc_macro', cv=5, n_jobs=4,\\\n",
     "                    return_train_score=False).fit(X_train, y_train)\n",
     "#!!Git set and work https://github.com/codepath/ios_guides/wiki/Using-Git-with-Terminal "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -1071,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
