--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -417,6 +417,16 @@
    },
    "outputs": [],
    "source": [
+    "def rf_param_dict(name='classify', estimators=[RandomForestClassifier()], n_samples=1000, m_features=[15]):\n",
+    "    dict={\n",
+    "        name: estimators,\n",
+    "        name + '__' + 'n_estimators': range(20, 101, 20),\n",
+    "        name + '__' + 'max_features': n_features_range(n_samples, m_features),\n",
+    "        name + '__' + 'min_samples_leaf': np.arange(0.01, 0.03, 0.05),\n",
+    "        name + '__' + 'max_depth': range(2, 11, 2)\n",
+    "    }\n",
+    "    return (dict)\n",
+    "\n",
     "def ann_param_dict(name='classify', estimators=[MLPClassifier()], n_samples=100, m_features=15):\n",
     "    dict={\n",
     "        name: estimators,\n",
@@ -444,16 +454,7 @@
     "        # check for multinomial\n",
     "    }\n",
     "    return (dict)\n",
-    "\n",
-    "def rf_param_dict(name='classify', estimators=[RandomForestClassifier()], n_samples=1000, m_features=[15]):\n",
-    "    dict={\n",
-    "        name: estimators,\n",
-    "        name + '__' + 'n_estimators': range(20, 101, 20),\n",
-    "        name + '__' + 'max_features': n_features_range(n_samples, m_features),\n",
-    "        name + '__' + 'min_samples_leaf': np.arange(0.01, 0.03, 0.05),\n",
-    "        name + '__' + 'max_depth': range(2, 11, 2)\n",
-    "    }\n",
-    "    return (dict)"
+    "\n"
    ]
   },
   {
@@ -1071,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
